add tegs to entrepoint
